# la_street_lights

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/superpowers/specs/: 2026-06-29-la-parcel-assessment-map-design.md
web/: app.js  index.html  serve.py
web/data/: city_boundary.geojson  landuse_stats.json  scale.json
