[project]
name = "la-street-lights"
version = "0.1.0"
description = "Map & tooling for LA Streetlight Maintenance Assessment District No. 5500"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "typer>=0.26.8",
]

[project.scripts]
street-lights = "la_street_lights.bin.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/la_street_lights"]
